--- a/.github/workflows/content_board.yml
+++ b/.github/workflows/content_board.yml
@@ -25,8 +25,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # main.py requirements (adjust if you add more libs later)
-          pip install requests beautifulsoup4 lxml rapidfuzz
+          pip install \
+            requests \
+            beautifulsoup4 \
+            lxml \
+            rapidfuzz \
+            feedparser
 
       - name: Run news bot (main.py)
         env:
