Update dependencies in content_board.yml
Added 'python-dateutil' to the dependencies in the workflow.

--- a/.github/workflows/content_board.yml
+++ b/.github/workflows/content_board.yml
@@ -30,7 +30,8 @@ jobs:
             beautifulsoup4 \
             lxml \
             rapidfuzz \
-            feedparser
+            feedparser \
+            python-dateutil
 
       - name: Run news bot (main.py)
         env:
