Update pip install dependencies in content_board.yml
Removed rapidfuzz from the list of pip installations.

--- a/.github/workflows/content_board.yml
+++ b/.github/workflows/content_board.yml
@@ -27,9 +27,8 @@ jobs:
             requests \
             beautifulsoup4 \
             lxml \
-            rapidfuzz \
-            feedparser \
-            python-dateutil
+            python-dateutil \
+            feedparser
 
       - name: Run news bot (main.py)
         env:
