Reorganize and update requirements.txt dependencies
Reordered and updated package dependencies in requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-feedparser==6.0.11
-requests==2.32.3
-rapidfuzz==3.9.6
-python-dateutil==2.9.0.post0
-beautifulsoup4==4.12.3
+requests
+beautifulsoup4
+lxml
+rapidfuzz
+feedparser
+python-dateutil
