--- a/.github/workflows/content_board.yml
+++ b/.github/workflows/content_board.yml
@@ -3,12 +3,11 @@ name: Itty Bitty Gaming News - Bot + Digest
 on:
   workflow_dispatch:
   schedule:
-    # Run frequently; the digest has a guard for 7pm PT, and manual runs force post.
+    # Runs frequently; digest.py has its own 7pm guard so it only posts at the right time.
     - cron: "*/30 * * * *"
 
 jobs:
-  news_bot:
-    name: News Pull + Content Board
+  bot_and_digest:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,70 +19,55 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies (from requirements.txt)
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run news bot (main.py)
+      # =========================
+      # RAW STORIES -> Gaming Blerbs
+      # =========================
+      - name: Run RAW bot (posts to Gaming Blerbs)
         env:
+          # ✅ Gaming Blerbs webhook (raw stories)
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          CONTENT_BOARD_WEBHOOK_URL: ${{ secrets.CONTENT_BOARD_WEBHOOK_URL }}
+
           USER_AGENT: "IttyBittyGamingNews/Bot"
           MODE: "RAW"
           BREAKING_MODE: "False"
         run: |
           python main.py
 
-  digest:
-    name: Evening Digest Newsletter
-    runs-on: ubuntu-latest
-    needs: news_bot
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies (from requirements.txt)
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run digest (digest.py)
+      # =========================
+      # DIGEST -> Gaming News
+      # =========================
+      - name: Run DIGEST (posts to Gaming News)
         env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          # ✅ Gaming News webhook (digest/newsletter)
+          DISCORD_WEBHOOK_URL: ${{ secrets.DIGEST_WEBHOOK_URL }}
 
-          # Force posting when you click "Run workflow"
+          # Allow manual runs to post immediately (otherwise guard controls posting)
           DIGEST_FORCE_POST: ${{ github.event_name == 'workflow_dispatch' && 'true' || '' }}
 
-          # Digest settings
           DIGEST_WINDOW_HOURS: "24"
           DIGEST_TOP_N: "5"
           DIGEST_MAX_PER_SOURCE: "1"
 
-          # Guard settings (7:00pm PT, DST-safe)
           DIGEST_GUARD_TZ: "America/Los_Angeles"
           DIGEST_GUARD_LOCAL_HOUR: "19"
           DIGEST_GUARD_LOCAL_MINUTE: "0"
           DIGEST_GUARD_WINDOW_MINUTES: "120"
 
-          # Branding
           NEWSLETTER_NAME: "Itty Bitty Gaming News"
           NEWSLETTER_TAGLINE: "Snackable daily gaming news — five days a week."
           USER_AGENT: "IttyBittyGamingNews/Digest"
 
-          # Adilo + YouTube inputs (kept optional)
+          # Featured video controls (your existing setup)
           FEATURED_VIDEO_FORCE_ID: ${{ vars.FEATURED_VIDEO_FORCE_ID }}
           YOUTUBE_FEATURED_URL: ${{ vars.YOUTUBE_FEATURED_URL }}
           YOUTUBE_FEATURED_TITLE: ${{ vars.YOUTUBE_FEATURED_TITLE }}
 
-          # Optional: override feed URLs (one per line) in repo variable FEED_URLS
+          # Optional override if you are using it
           FEED_URLS: ${{ vars.FEED_URLS }}
-
         run: |
           python digest.py
