Update webhook names and comments in workflow

--- a/.github/workflows/content_board.yml
+++ b/.github/workflows/content_board.yml
@@ -3,7 +3,7 @@ name: Itty Bitty Gaming News - Digest
 on:
   workflow_dispatch:
   schedule:
-    # Run every 30 minutes; digest.py's guard will only allow posting near 7pm PT
+    # Run every 30 minutes; digest.py guard allows posting near 7pm PT only.
     - cron: "*/30 * * * *"
 
 jobs:
@@ -24,16 +24,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: SECRET PRESENCE CHECK (Digest webhook)
+      - name: SECRET PRESENCE CHECK (content board webhook)
         env:
-          DIGEST_WEBHOOK_URL: ${{ secrets.DIGEST_WEBHOOK_URL }}
+          CONTENT_BOARD_WEBHOOK_URL: ${{ secrets.CONTENT_BOARD_WEBHOOK_URL }}
         run: |
-          echo "DIGEST_WEBHOOK_URL=$([ -n "$DIGEST_WEBHOOK_URL" ] && echo PRESENT || echo MISSING)"
+          echo "CONTENT_BOARD_WEBHOOK_URL=$([ -n "$CONTENT_BOARD_WEBHOOK_URL" ] && echo PRESENT || echo MISSING)"
 
       - name: Run digest (posts to Gaming News)
         env:
-          # ✅ This is the ONLY env var digest.py requires for Discord posting
-          DISCORD_WEBHOOK_URL: ${{ secrets.DIGEST_WEBHOOK_URL }}
+          # ✅ digest.py only reads DISCORD_WEBHOOK_URL, so we map your secret into it.
+          DISCORD_WEBHOOK_URL: ${{ secrets.CONTENT_BOARD_WEBHOOK_URL }}
 
           # Manual runs should always post immediately
           DIGEST_FORCE_POST: ${{ github.event_name == 'workflow_dispatch' && 'true' || '' }}
@@ -51,10 +51,10 @@ jobs:
           NEWSLETTER_TAGLINE: "Snackable daily gaming news — five days a week."
           USER_AGENT: "IttyBittyGamingNews/Digest"
 
-          # ✅ YouTube latest via RSS (your channel id)
+          # YouTube RSS (your channel id)
           YOUTUBE_RSS_URL: "https://www.youtube.com/feeds/videos.xml?channel_id=UC0SJd4h7GQqoYTVjlDnSzqQ"
 
-          # Optional manual override (only if you set these repo variables)
+          # Optional manual overrides (repo variables)
           YOUTUBE_FEATURED_URL: ${{ vars.YOUTUBE_FEATURED_URL }}
           YOUTUBE_FEATURED_TITLE: ${{ vars.YOUTUBE_FEATURED_TITLE }}
 
@@ -64,10 +64,10 @@ jobs:
           ADILO_PUBLIC_HOME_PAGE: "https://adilo.bigcommand.com/c/ittybittygamingnews/home"
           FEATURED_VIDEO_FALLBACK_URL: "https://adilo.bigcommand.com/c/ittybittygamingnews/home"
 
-          # If you have a stable force id variable, keep using it (recommended)
+          # Stable override (recommended if scrape times out)
           FEATURED_VIDEO_FORCE_ID: ${{ vars.FEATURED_VIDEO_FORCE_ID }}
 
-          # Feeds (optional repo variable; if empty, digest.py uses defaults)
+          # Feed list (optional repo variable)
           FEED_URLS: ${{ vars.FEED_URLS }}
 
         run: |
