--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests
-beautifulsoup4
-lxml
-rapidfuzz
-feedparser
-python-dateutil
+requests==2.32.3
+beautifulsoup4==4.12.3
+lxml==5.3.0
+rapidfuzz==3.9.7
+feedparser==6.0.11
+python-dateutil==2.9.0.post0
